BUG: 290059

Fix schedule handling